written Group Lasso equations

--- a/Group_Lasso_Notebooks/example_group_lasso.ipynb
+++ b/Group_Lasso_Notebooks/example_group_lasso.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "           supress_warning=True, tol=0.001, warm_start=False)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -368,8 +368,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -438,6 +440,72 @@
     "print(\"True intercept: {intercept}\".format(intercept=intercept))\n",
     "print(\"Estimated intercept: {intercept}\".format(intercept=gl.intercept_))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Group Lasso Regularisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Description** \n",
+    "\n",
+    "Group Lasso \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\ell (\\beta_g, ) = \\|\\sum_{g \\in G}[\\textbf{X}_g \\beta_g] - \\textbf {y}\\|^2_2 + \\lambda_1\\|\\beta\\|_1 + \\lambda_2 \\sum_{g \\in G}\\sqrt{d_g}\\|\\beta\\|_2$\n",
+    "\n",
+    "- $\\textbf{X}_g \\in \\mathbb{R}^{n x d_g}$ is the data matrix corresponding to the covariates in group $g$,\n",
+    "\n",
+    "- $\\beta_g$ is the regression coefficent representing group $g$,\n",
+    "- $\\textbf{y} \\in \\textbf{R}^n$ is the regression targert. \n",
+    "- $d_g$ is the dimensionality of group $g$ \n",
+    "- $\\lambda_1$ is the parameter-wise regularisation penalty \n",
+    "- $\\lambda_2$ is the group-wise regularisation penalty  \n",
+    "- $G$ is the set of all groups."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Group Lasso Regularisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Description** \n",
+    "\n",
+    "Group Lasso \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\ell (\\beta_g, ) = \\|\\sum_{g \\in G}[\\textbf{X}_g \\beta_g] - \\textbf {y}\\|^2_2 + \\lambda_1\\|\\beta\\|_1 + \\lambda_2 \\sum_{g \\in G}\\sqrt{d_g}\\|\\beta\\|_2$\n",
+    "\n",
+    "- $\\textbf{X}_g \\in \\mathbb{R}^{n x d_g}$ is the data matrix corresponding to the covariates in group $g$,\n",
+    "\n",
+    "- $\\beta_g$ is the regression coefficent representing group $g$,\n",
+    "- $\\textbf{y} \\in \\textbf{R}^n$ is the regression targert. \n",
+    "- $d_g$ is the dimensionality of group $g$ \n",
+    "- $\\lambda_1$ is the parameter-wise regularisation penalty \n",
+    "- $\\lambda_2$ is the group-wise regularisation penalty  \n",
+    "- $G$ is the set of all groups."
    ]
   }
  ],
