--- a/finalized_code/functions_class.ipynb
+++ b/finalized_code/functions_class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,240 +197,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>crop_count</th>\n",
-       "      <th>crop_name_1</th>\n",
-       "      <th>crop_harvest_1</th>\n",
-       "      <th>crop_intercrop_1</th>\n",
-       "      <th>ID_PROJ</th>\n",
-       "      <th>ID_COUNTRY</th>\n",
-       "      <th>YEAR</th>\n",
-       "      <th>SURVEY_ID</th>\n",
-       "      <th>ID_HH</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>...</th>\n",
-       "      <th>value_livestock_production_USD_PPP_pHH_Yr</th>\n",
-       "      <th>value_livestock_prod_consumed_USD_PPP_pHH_Yr</th>\n",
-       "      <th>Market_Orientation</th>\n",
-       "      <th>Livestock_Orientation</th>\n",
-       "      <th>Food_Availability_kCal_MAE_day</th>\n",
-       "      <th>Food_Self_Sufficiency_kCal_MAE_day</th>\n",
-       "      <th>NrofMonthsWildFoodCons</th>\n",
-       "      <th>Gender_MaleControl</th>\n",
-       "      <th>Gender_FemaleControl</th>\n",
-       "      <th>continent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>na</td>\n",
-       "      <td>groundnut</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>CFM</td>\n",
-       "      <td>TZ</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>TZ_CFM_2015</td>\n",
-       "      <td>TZ_2015_CFM_1_1</td>\n",
-       "      <td>Tanzania</td>\n",
-       "      <td>...</td>\n",
-       "      <td>38.500640</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.049505</td>\n",
-       "      <td>3650.57</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>africa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>na</td>\n",
-       "      <td>millet</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>CFM</td>\n",
-       "      <td>TZ</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>TZ_CFM_2015</td>\n",
-       "      <td>TZ_2015_CFM_2_1</td>\n",
-       "      <td>Tanzania</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3632.45</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.499999</td>\n",
-       "      <td>0.500001</td>\n",
-       "      <td>africa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>na</td>\n",
-       "      <td>groundnut</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>CFM</td>\n",
-       "      <td>TZ</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>TZ_CFM_2015</td>\n",
-       "      <td>TZ_2015_CFM_3_1</td>\n",
-       "      <td>Tanzania</td>\n",
-       "      <td>...</td>\n",
-       "      <td>128.335467</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.12987</td>\n",
-       "      <td>5314.78</td>\n",
-       "      <td>1750</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>africa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>na</td>\n",
-       "      <td>cowpea</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>CFM</td>\n",
-       "      <td>TZ</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>TZ_CFM_2015</td>\n",
-       "      <td>TZ_2015_CFM_4_1</td>\n",
-       "      <td>Tanzania</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>257.235</td>\n",
-       "      <td>257.235</td>\n",
-       "      <td>0</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>africa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>na</td>\n",
-       "      <td>sesame</td>\n",
-       "      <td>na</td>\n",
-       "      <td>na</td>\n",
-       "      <td>CFM</td>\n",
-       "      <td>TZ</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>TZ_CFM_2015</td>\n",
-       "      <td>TZ_2015_CFM_5_1</td>\n",
-       "      <td>Tanzania</td>\n",
-       "      <td>...</td>\n",
-       "      <td>233.994961</td>\n",
-       "      <td>23.102694</td>\n",
-       "      <td>0.931377</td>\n",
-       "      <td>0.695041</td>\n",
-       "      <td>925.31</td>\n",
-       "      <td>22.0702</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>africa</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 46 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  crop_count crop_name_1 crop_harvest_1 crop_intercrop_1 ID_PROJ ID_COUNTRY  \\\n",
-       "0         na   groundnut             na               na     CFM         TZ   \n",
-       "1         na      millet             na               na     CFM         TZ   \n",
-       "2         na   groundnut             na               na     CFM         TZ   \n",
-       "3         na      cowpea             na               na     CFM         TZ   \n",
-       "4         na      sesame             na               na     CFM         TZ   \n",
-       "\n",
-       "   YEAR    SURVEY_ID            ID_HH   Country  ...  \\\n",
-       "0  2015  TZ_CFM_2015  TZ_2015_CFM_1_1  Tanzania  ...   \n",
-       "1  2015  TZ_CFM_2015  TZ_2015_CFM_2_1  Tanzania  ...   \n",
-       "2  2015  TZ_CFM_2015  TZ_2015_CFM_3_1  Tanzania  ...   \n",
-       "3  2015  TZ_CFM_2015  TZ_2015_CFM_4_1  Tanzania  ...   \n",
-       "4  2015  TZ_CFM_2015  TZ_2015_CFM_5_1  Tanzania  ...   \n",
-       "\n",
-       "   value_livestock_production_USD_PPP_pHH_Yr  \\\n",
-       "0                                  38.500640   \n",
-       "1                                   0.000000   \n",
-       "2                                 128.335467   \n",
-       "3                                   0.000000   \n",
-       "4                                 233.994961   \n",
-       "\n",
-       "  value_livestock_prod_consumed_USD_PPP_pHH_Yr Market_Orientation  \\\n",
-       "0                                     0.000000                  1   \n",
-       "1                                     0.000000                  1   \n",
-       "2                                     0.000000                  1   \n",
-       "3                                     0.000000                 na   \n",
-       "4                                    23.102694           0.931377   \n",
-       "\n",
-       "  Livestock_Orientation Food_Availability_kCal_MAE_day  \\\n",
-       "0              0.049505                        3650.57   \n",
-       "1                     0                        3632.45   \n",
-       "2               0.12987                        5314.78   \n",
-       "3                    na                        257.235   \n",
-       "4              0.695041                         925.31   \n",
-       "\n",
-       "  Food_Self_Sufficiency_kCal_MAE_day  NrofMonthsWildFoodCons  \\\n",
-       "0                                  0                       0   \n",
-       "1                                  0                       4   \n",
-       "2                               1750                       1   \n",
-       "3                            257.235                       0   \n",
-       "4                            22.0702                       0   \n",
-       "\n",
-       "   Gender_MaleControl Gender_FemaleControl continent  \n",
-       "0                   0                    1    africa  \n",
-       "1            0.499999             0.500001    africa  \n",
-       "2                   1                    0    africa  \n",
-       "3                  na                   na    africa  \n",
-       "4                   1                    0    africa  \n",
-       "\n",
-       "[5 rows x 46 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'Cleaning_Functions' object has no attribute 'replace_na_with_NaN'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-e6a001aceac9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#check if replaceNan function works with updated .py file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mb\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mfun\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace_na_with_NaN\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Cleaning_Functions' object has no attribute 'replace_na_with_NaN'"
+     ]
     }
    ],
    "source": [
     "#check if replaceNan function works with updated .py file\n",
-    "b= fun.replace_na_with_NaN(dat)\n",
+    "b = fun.replace_na_with_NaN(dat)\n",
     "b.head()"
    ]
   },
@@ -2623,7 +2407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
