redo head education
head education seems to be important, streamlining which variables are included

--- a/more_data_cleaning.ipynb
+++ b/more_data_cleaning.ipynb
@@ -1034,18 +1034,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12193, 46)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#clean out the weird head education levels \n",
     "\n",
     "#bigData.loc[bigData['Head_EducationLevel'] == [['primary', 'illiterate', 'secondary', 'literate', 'no_school','adult_education', 'no school','adult education, literacy school or parish school''postsecondary', 'informal', 'No_school', 'none','religious_school', 'islamic_school']]]\n",
     "\n",
-    "array = ['primary', 'illiterate', 'secondary', 'literate', 'no_school','adult_education', 'no school','adult education, literacy school or parish school''postsecondary', 'informal', 'No_school', 'nan' , 'none','religious_school', 'islamic_school']\n",
-    "bigData = bigData.loc[(bigData['Head_EducationLevel'].isin(array))]\n",
-    "\n",
-    "\n"
+    "array = ['primary', 'illiterate', 'secondary', 'literate', 'no_school','adult_education', 'no school','adult education, literacy school or parish school''postsecondary', 'informal', 'No_school' , 'none','religious_school', 'islamic_school']\n",
+    "bigData_test1 = bigData.loc[(bigData['Head_EducationLevel'].isin(array))]\n",
+    "bigData_test1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11962, 46)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array2 = ['primary', 'secondary','illiterate','literate','adult_education','no_school', 'no school','informal', 'postsecondary', 'No_school' , 'none']\n",
+    "bigData_test2 = bigData.loc[(bigData['Head_EducationLevel'].isin(array2))]\n",
+    "bigData_test2.shape"
    ]
   },
   {
@@ -1215,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,16 +1257,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(13310, 46)"
+       "(12193, 46)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
